--- a/style.css
+++ b/style.css
@@ -171,7 +171,7 @@ img {
     background-image: url("files/warning.png") !important;
   }
   
-  div.stop {
+  div.def {
     padding: 1em;
     margin: 1em 0;
     padding-left: 100px;
@@ -180,9 +180,9 @@ img {
     background-position: 15px center;
     min-height: 100px;
     color: #ffffff;
-    background-color: #A73849;
-    border: solid 5px #CE919A;
-    background-image: url("files/stop.png") !important;
+    background-color: #993333;
+    border: solid 5px #CC9999;
+    background-image: url("files/pen_white.png") !important;
   }
 
   div.puzzle {
@@ -199,3 +199,31 @@ img {
     background-image: url("files/puzzle_black.png") !important;
   }
 
+  div.video {
+    padding: 1em;
+    margin: 1em 0;
+    padding-left: 100px;
+    background-size: 50px;
+    background-repeat: no-repeat;
+    background-position: 15px center;
+    min-height: 120px;
+    color: #1f3047;
+    background-color: #A4B1C1;
+    border: solid 5px #DBE0E6;
+    background-image: url("files/reel.png") !important;
+  }
+  
+.flashcard {
+  padding: 1em;
+  background: #D8CFDD;
+  color: #3C1053;
+  border: 1px solid #775887;
+}
+
+.bluebox {
+  padding: 1em;
+  background: #1f3047;
+  color: white;
+  border: 3px solid #1f3047;
+  border-radius: 12px;
+}
