--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ img {
     color: #ffffff;
     background-color: #993333;
     border: solid 5px #CC9999;
-    background-image: url("files/pen_white.png") !important;
+    background-image: url("files/pencil_white.png") !important;
   }
 
   div.puzzle {
