--- a/style.css
+++ b/style.css
@@ -168,7 +168,7 @@ img {
     color: #000000;
     background-color: #F2C55A;
     border: solid 5px #FBECC8;
-    background-image: url("files/warning.png") !important;
+    background-image: url("files/slip.png") !important;
   }
   
   div.def {
