--- a/style.css
+++ b/style.css
@@ -165,10 +165,10 @@ img {
     background-repeat: no-repeat;
     background-position: 15px center;
     min-height: 110px;
-    color: #000000;
-    background-color: #F2C55A;
-    border: solid 5px #FBECC8;
-    background-image: url("files/slip.png") !important;
+    color: #ffffff;
+    background-color: #993333;
+    border: solid 5px #CC9999;
+    background-image: url("files/slip_white.png") !important;
   }
   
   div.def {
@@ -179,10 +179,10 @@ img {
     background-repeat: no-repeat;
     background-position: 15px center;
     min-height: 100px;
-    color: #ffffff;
-    background-color: #993333;
-    border: solid 5px #CC9999;
-    background-image: url("files/pencil_white.png") !important;
+    color: #000000;
+    background-color: #F2C55A;
+    border: solid 5px #FBECC8;
+    background-image: url("files/pencil_black.png") !important;
   }
 
   div.puzzle {
@@ -212,7 +212,13 @@ img {
     border: solid 5px #DBE0E6;
     background-image: url("files/reel.png") !important;
   }
-  
+
+.gls a {
+      color: #8a1e00 !important;
+      font-weight: bold;
+      text-decoration: none; /* optional: remove underline */
+    }
+
 .flashcard {
   padding: 1em;
   background: #D8CFDD;
