--- a/style.css
+++ b/style.css
@@ -193,10 +193,10 @@ img {
     background-repeat: no-repeat;
     background-position: 15px center;
     min-height: 110px;
-    color: #000000;
-    background-color: #E2B86C;
-    border: solid 5px #F7EBD5;
-    background-image: url("files/puzzle_black.png") !important;
+    color: #ffffff;
+    background-color: #695887;
+    border: solid 5px #DAD5E1;
+    background-image: url("files/puzzle_white.png") !important;
   }
 
   div.video {
