--- a/style.css
+++ b/style.css
@@ -143,75 +143,110 @@ img {
 /* -----------Sidebar div tips------------- */
 /* from r-pkgs.org*/
 
-  div.bulb {
-    padding: 1em;
-    margin: 1em 0;
-    padding-left: 100px;
-    background-size: 70px;
-    background-repeat: no-repeat;
-    background-position: 15px center;
-    min-height: 110px;
-    color: #ffffff;
-    background-color: #2A415F;
-    border: solid 5px #95A0AF;
-    background-image: url("files/bulb.png") !important;
-  }
 
-  div.warning {
-    padding: 1em;
-    margin: 1em 0;
-    padding-left: 100px;
-    background-size: 70px;
-    background-repeat: no-repeat;
-    background-position: 15px center;
-    min-height: 110px;
-    color: #ffffff;
-    background-color: #993333;
-    border: solid 5px #CC9999;
-    background-image: url("files/slip_white.png") !important;
-  }
-  
-  div.def {
-    padding: 1em;
-    margin: 1em 0;
-    padding-left: 100px;
-    background-size: 70px;
-    background-repeat: no-repeat;
-    background-position: 15px center;
-    min-height: 100px;
-    color: #000000;
-    background-color: #F2C55A;
-    border: solid 5px #FBECC8;
-    background-image: url("files/pencil_black.png") !important;
-  }
 
-  div.puzzle {
-    padding: 1em;
-    margin: 1em 0;
-    padding-left: 100px;
-    background-size: 70px;
-    background-repeat: no-repeat;
-    background-position: 15px center;
-    min-height: 110px;
-    color: #ffffff;
-    background-color: #695887;
-    border: solid 5px #DAD5E1;
-    background-image: url("files/puzzle_white.png") !important;
-  }
+div.bulb {
+  padding: 1em;
+  margin: 1em 0;
+  padding-left: 100px;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  min-height: 110px;
+  color: #000000; /* change to black for contrast on white background */
+  background-color: #DFE3E7;
 
-  div.video {
-    padding: 1em;
-    margin: 1em 0;
-    padding-left: 100px;
-    background-size: 50px;
-    background-repeat: no-repeat;
-    background-position: 15px center;
-    min-height: 120px;
-    color: #1f3047;
-    background-color: #A4B1C1;
-    border: solid 5px #DBE0E6;
-    background-image: url("files/reel.png") !important;
-  }
+  /* Borders */
+  border: 3px solid #2A415F;         /* base border all around */
+  border-top: 20px solid #2A415F;     /* thicker top */
+  border-left: 20px solid #2A415F;    /* thicker left */
+
+  background-image: url("files/bulb_black.png") !important;
+}
+
+
+
+
+div.warning {
+  padding: 1em;
+  margin: 1em 0;
+  padding-left: 100px;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  min-height: 110px;
+  color: #000000; /* change to black for contrast on white background */
+  background-color: #F0E0E0;
+
+  /* Borders */
+  border: 3px solid #993333;         /* base border all around */
+  border-top: 20px solid #993333;     /* thicker top */
+  border-left: 20px solid #993333;    /* thicker left */
+
+  background-image: url("files/slip_black.png") !important;
+}
+
+
+div.def {
+  padding: 1em;
+  margin: 1em 0;
+  padding-left: 100px;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  min-height: 110px;
+  color: #000000; /* change to black for contrast on white background */
+  background-color: #FDF6E6;
+
+  /* Borders */
+  border: 3px solid #F2C55A;         /* base border all around */
+  border-top: 20px solid #F2C55A;     /* thicker top */
+  border-left: 20px solid #F2C55A;    /* thicker left */
+
+  background-image: url("files/pencil_black.png") !important;
+}
+
+
+
+div.puzzle {
+  padding: 1em;
+  margin: 1em 0;
+  padding-left: 100px;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  min-height: 110px;
+  color: #000000; /* change to black for contrast on white background */
+  background-color: #E9E6ED;
+
+  /* Borders */
+  border: 3px solid #695887;         /* base border all around */
+  border-top: 20px solid #695887;     /* thicker top */
+  border-left: 20px solid #695887;    /* thicker left */
+
+  background-image: url("files/puzzle_black.png") !important;
+}
+
+
+div.video {
+  padding: 1em;
+  margin: 1em 0;
+  padding-left: 100px;
+  background-size: 70px;
+  background-repeat: no-repeat;
+  background-position: 15px center;
+  min-height: 110px;
+  color: #000000; /* change to black for contrast on white background */
+  background-color: #F1F3F6;
+
+  /* Borders */
+  border: 3px solid #A4B1C1;         /* base border all around */
+  border-top: 20px solid #A4B1C1;     /* thicker top */
+  border-left: 20px solid #A4B1C1;    /* thicker left */
+
+  background-image: url("files/reel.png") !important;
+}
+
 
 .gls a {
       color: #8a1e00 !important;
