--- a/style.css
+++ b/style.css
@@ -268,3 +268,12 @@ div.video {
   border: 3px solid #1f3047;
   border-radius: 12px;
 }
+
+.baser {
+  padding: 1em;
+  background: #D8CFDD;
+  color: #3C1053;
+  border: 3px solid #D8CFDD;
+  border-radius: 12px;
+  margin-bottom: 1em;
+}
