--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@ caption {
 /*____Code Chunk Colour____*/
 
 pre {
-    border: 1px solid #cccccc !important;
-    border-color: #cccccc ;
+    border: 1px solid #676e98 !important;
+    border-color: #676e98 ;
     page-break-inside: avoid;
     font-size: 15px;
     line-height: 1.6;
