--- a/style.css
+++ b/style.css
@@ -365,3 +365,13 @@ code, kbd, samp {
   outline: none;
   box-shadow: none;
 }
+
+/* ----------------------------------------
+   Horizontal Line
+---------------------------------------- */
+
+hr {
+  border: none;
+  border-top: 4px solid #5a5f80; /* adjust color */
+  margin: 2em 0;
+}
