--- a/style.css
+++ b/style.css
@@ -5,6 +5,16 @@
 
 
 /* ----------------------------------------
+   Fira Math Font Import
+---------------------------------------- */
+
+@font-face {
+  font-family: 'Fira Math';
+  src: url('files/fonts/FiraMath-Regular.otf') format('opentype');
+}
+
+
+/* ----------------------------------------
    Base Styles
 ---------------------------------------- */
 body, .book, .content, .sidebar, .navbar {
@@ -442,3 +452,5 @@ hr {
   border-top: 4px solid #5a5f80; /* adjust color */
   margin: 2em 0;
 }
+
+
