--- a/style.css
+++ b/style.css
@@ -431,6 +431,20 @@ hr {
   margin: 2em 0;
 }
 
+/* ----------------------------------------
+   No Borders in Tables
+---------------------------------------- */
+
+table, th, td {
+  border: none !important;
+}
+
+.book .content table,
+.book .content table th,
+.book .content table td {
+  border: none !important;
+}
+
 
 
 
