--- a/style.css
+++ b/style.css
@@ -436,14 +436,14 @@ hr {
   margin: 2em 0;
 }
 
-/* ----------------------------------------
-   No Borders in Tables
+/* ---------------------------------------------------
+   No Borders in Tables, default: all borders present
    
    apply with
    <div class="custom-html-table">
    ...table...
    </div>
----------------------------------------- */
+------------------------------------------------------ */
 
 /* Base: remove all borders */
 .custom-html-table table,
