--- a/style.css
+++ b/style.css
@@ -429,6 +429,7 @@ table, th, td {
   color: #e1e2ea !important;
   background-color: #1d1f2b !important;
   border-color: #adbdd1 !important;
+  font-size: 0.9em;
 }
 
 thead, caption {
