--- a/style.css
+++ b/style.css
@@ -8,10 +8,8 @@
    Fira Math Font Import
 ---------------------------------------- */
 
-@font-face {
-  font-family: 'Fira Math';
-  src: url('files/fonts/FiraMath-Regular.otf') format('opentype');
-}
+
+@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@375&display=swap');
 
 
 /* ----------------------------------------
@@ -301,7 +299,7 @@ div.video {
 code, kbd, samp {
   background-color: #1d1f2b !important;
   color: #e1e2ea !important;
-  font-family: 'Fira Mono', monospace !important;
+  font-family: "Recursive", sans-serif !important;
   padding: 0.15em 0.15em;
   font-size: 0.85em;
   box-shadow: none !important;
@@ -321,7 +319,7 @@ code, kbd, samp {
   border-radius: 6px;
   padding: 1em;
   font-size: 0.9rem !important;
-  font-family: 'Fira Mono', monospace !important;
+  font-family: "Recursive", sans-serif !important;
   line-height: 1.4 !important;
   white-space: pre-wrap !important;
   overflow-x: auto !important;
@@ -376,7 +374,7 @@ pre:not(.sourceCode) {
   border: 2px solid #5a5f80;
   border-radius: 6px;
   font-size: 0.9rem !important;
-  font-family: 'Fira Mono', monospace !important;
+  font-family: "Recursive", sans-serif !important;
   line-height: 1.4 !important;
   white-space: pre-wrap !important;
   width: 100% !important;
