--- a/style.css
+++ b/style.css
@@ -494,3 +494,42 @@ table {
   border-bottom: 4px double #e1e2ea !important;
 }
 
+
+/* ----------------------------------------
+   Download This Button
+---------------------------------------- */
+
+a.btn-primary {
+  background-color: #e57726;
+  border-color: #e57726;
+  color: #000;
+  margin-top: 0.75rem;    /* adds space above */
+}
+
+a.btn-primary:hover {
+  background-color: #e57726;
+  border-color: #e57726;
+  color: #000;
+}
+
+.icon-img {
+  width: 1em;
+  height: 1em;
+  margin-right: 0.4em;
+  vertical-align: middle; 
+  display: inline;        
+}
+
+/* muted gray for disabled state */
+
+a.btn-primary.disabled,
+a.btn-primary[aria-disabled="true"] {
+  background-color: #cb7334;   
+  border-color: #cb7334;          
+  color: #4d4d4d;         
+  pointer-events: none;        /* prevent clicks */
+  cursor: not-allowed;
+  opacity: 0.85;
+  text-decoration: none;
+  margin-top: 0.75rem;      
+}
