--- a/style.css
+++ b/style.css
@@ -476,7 +476,7 @@ table {
 /* Center text and add small padding */
 .custom-html-table th,
 .custom-html-table td {
-  text-align: center;
+  text-align: left;
   padding: 0.2em 0.4em;
 }
 
