--- a/style.css
+++ b/style.css
@@ -654,3 +654,7 @@ a.btn-primary[aria-disabled="true"] {
     color: #cb7334 !important;
   }
 }
+
+@media (max-width: 991.98px) {
+  header.sidebar.sidebar-book .book-brand * { color: #cb7334 !important; }
+}
