--- a/style.css
+++ b/style.css
@@ -426,6 +426,17 @@ table { caption-side: bottom; }
 .top-bottom-rule-only td { border: none !important; border-collapse: collapse; }
 .top-bottom-rule-only table { border-top: 4px double var(--fg) !important; border-bottom: 4px double var(--fg) !important; }
 
+
+
+
+
+
+
+
+
+
+
+
 .glossary-table table,
 .glossary-table th,
 .glossary-table td { border: none !important; border-collapse: collapse; }
@@ -433,6 +444,13 @@ table { caption-side: bottom; }
 .glossary-table thead tr,
 .glossary-table thead th { border-bottom: 1.5px solid var(--fg) !important; }
 .glossary-table th, .glossary-table td { text-align: left; padding: 0.7em 0.4em; }
+
+
+.glossary-table td:first-child,
+.glossary-table th:first-child { min-width: 1.25in; }
+
+
+
 
 /* ----------------------------------------
    Buttons
