--- a/style.css
+++ b/style.css
@@ -588,17 +588,9 @@ header.navbar,
 
 
 
-
-
-
-
-
-
-
-
-
-
-
+/* ----------------------------------------
+   TOP NAVBAR
+---------------------------------------- */
 
 
 /* Compact top navbar */
@@ -657,7 +649,9 @@ header.navbar,
 
 
 
-
+/* ----------------------------------------
+   Mobile NAVBAR
+---------------------------------------- */
 
 
 
@@ -667,8 +661,8 @@ header.navbar,
   .quarto-sidebar-toggle,
   .quarto-secondary-nav,
   .sidebar-header {
-    background: var(--nav-bg) !important;    /* reuse your navbar colors */
-    color: var(--nav-fg) !important;
+    background: #61689e !important;    /* reuse your navbar colors */
+    color: #dfe1ec !important;
     border-color: transparent !important;
     box-shadow: 0 1px 0 rgba(0,0,0,.08);
   }
@@ -678,6 +672,6 @@ header.navbar,
   .quarto-secondary-nav a,
   .quarto-secondary-nav .nav-link,
   .quarto-secondary-nav .bi {
-    color: var(--nav-fg) !important;
+    color: #dfe1ec !important;
   }
 }
