--- a/style.css
+++ b/style.css
@@ -661,10 +661,9 @@ header.navbar,
   .quarto-sidebar-toggle,
   .quarto-secondary-nav,
   .sidebar-header {
-    background: #61689e !important;    /* reuse your navbar colors */
+    background: #575e8e !important;    /* reuse your navbar colors */
     color: #dfe1ec !important;
     border-color: transparent !important;
-    box-shadow: 0 1px 0 rgba(0,0,0,.08);
   }
 
   /* Ensure text/icons inside that bar also adopt the color */
