--- a/style.css
+++ b/style.css
@@ -177,9 +177,7 @@ div.warning,
 div.stop,
 div.puzzle,
 div.def,
-div.video,
-div.baser,
-div.flashcard {
+div.video {
   padding: 1em;
   padding-left: 100px;      /* space for icon */
   margin-top: 2rem;         /* empty space above */
@@ -190,6 +188,7 @@ div.flashcard {
   min-height: 110px;
   color: #000 !important;
 }
+
 
 
 div.bulb {
@@ -249,10 +248,15 @@ div.video {
 }
 
 .baser {
+  padding-top: 0.75em;
+  padding-left: 1em;
+  margin-top: 2em;
+  margin-bottom: 2em;
   background: #767da2;
   border: 3px solid #767da2;
   border-radius: 9px;
   color: #1d1f2b !important; /* black-ish text for collapsed state */
+
 }
 
 .baser summary {
@@ -267,6 +271,7 @@ div.video {
 
 
 .flashcard {
+  padding: 1em;
   background: #111111;
   color: var(--fg) !important;
   border: 3px solid var(--panel-2);
