--- a/style.css
+++ b/style.css
@@ -292,6 +292,21 @@ div.video {
 }
 
 
+.bluebox {
+  background: #1d1f2b;
+  color: #d1d4e0 !important;
+  border: 1px solid #1d1f2b;
+  margin-bottom: 1em;
+}
+
+.bluebox * {
+  background: #1d1f2b;
+  color: #d1d4e0 !important;
+  padding: 0;
+  margin: 0;
+}
+
+
 /* ----------------------------------------
    Inline code
 ---------------------------------------- */
