--- a/style.css
+++ b/style.css
@@ -810,3 +810,7 @@ html.nav-hidden #quarto-tertiary-nav {
 transform: translateY(-100%);
 }
 }
+
+@media (max-width: 991.98px){
+#quarto-tertiary-nav{ display:block; }
+}
